добавил background-color к .app, поставил fixed на header-wrap

--- a/src/assets/styles/components/content.scss
+++ b/src/assets/styles/components/content.scss
@@ -1,7 +1,7 @@
 .content {
   --screen-height: calc(100vh - 50px);
   min-height: var(--screen-height);
-  padding-top: 50px;
+  padding-top: 55px;
   /* TODO если плавность blur сохранится, тогда можно будет это свойство удалить */
   // filter: blur(0); убрал, потому что иначе кнопка button-new (в collection) не становится fixed.
   transition: filter .4s ease-in-out;
